--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -14,6 +14,7 @@ $default-z-index: 500;
 $hover-z-index: 1000;
 $z-index-increment: 100;
 $footer-btm-margin: 10px;
+$layout-padding: 30px;
 
 html, body {
   height: 100%;
@@ -74,6 +75,8 @@ header#top-bar .logo-local-group-name {
 //
 
 nav#main-nav {
+  max-height: calc(100% - #{$header-height} - #{$footer-height} - #{$layout-padding});
+  overflow: auto;
   border: 1px solid $border-color;
   border-left: 0;
   border-top-right-radius: 0.25rem;
